# advent-of-code-2024

./: .build.zig  .day-x.cabal  .gitignore  README.md  select_lang.py
day-01/: .gitignore  README.md  day-one.cabal
day-01/src/: main.zig
day-02/: README.md
day-03/: README.md
day-03/src/: Main.hs
day-04/: README.md  day-four.cabal
day-04/src/: Main.hs
day-05/: main.py  ruff.toml
day-06/: Main.hs  README.md  day-six.cabal  main.py
day-07/: main.py  ruff.toml
day-08/: .editorconfig  .gitignore  README.md  kls_database.db  main.py  settings.gradle.kts
day-08/app/: build.gradle.kts
day-08/app/src/main/kotlin/org/example/: App.kt
day-09/: Cargo.toml  Main.hs  README.md  Refactored.hs  day-nine.cabal  main.py
day-10/: main.py
day-11/: README.md  main.py
day-11/src/: main.rs
day-four/: README.md
day-one/: build.zig  build.zig.zon  stack.yaml
day-one/src/: Main.hs  main.rs
day-seven/: main.py
day-six/: day-six.cabal
day-six/src/: Main.hs
day-three/: README.md  day-three.cabal
day-two/: README.md  day-two.cabal
day-two/src/: Main.hs
