cabal-version:       2.2

name:                day-three
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple

executable day-three
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, regex-tdfa ^>= 1.3.2
